Improved code quality in external API services
Enhance DrugService and WeatherService with modern Java features and Lombok

Changes to DrugService:
- Replace .get(0) with .getFirst() for better readability
- Add @SuppressWarnings("unchecked") for unavoidable API type casts
- Extract MAX_TEXT_LENGTH constant (500) to avoid magic numbers
- Replace manual getters/setters with Lombok @Data in DrugInformation
- Improve type safety with pattern matching for instanceof checks

Changes to WeatherService:
- Replace .get(0) with .getFirst() for better readability
- Add @SuppressWarnings("unchecked") for unavoidable API type casts
- Replace manual getters/setters with Lombok @Data in WeatherData
- Reduce boilerplate code from ~50 lines to ~10 lines per inner class